@@ -25,6 +25,8 @@ import java.util.stream.Collectors;
 import static java.util.stream.Collectors.groupingBy;
 
 class AsyncAnnotationScannerUtil {
+    private AsyncAnnotationScannerUtil() {}
+
     public static AsyncHeaders getAsyncHeaders(AsyncOperation op, StringValueResolver resolver) {
         if (op.headers().values().length == 0) {
             return AsyncHeaders.NOT_DOCUMENTED;
@@ -42,6 +44,14 @@ class AsyncAnnotationScannerUtil {
                             .enumValue(values)
                             .example(exampleValue)
                             .build());
+
+                    // FIXME: Replace AsyncHeaders by proper AsyncAPI v3 Headers
+                    // MessageHeaders.of(
+                    //         SchemaObject.builder()
+                    //                 .description(getDescription(headers, resolver))
+                    //                 .enumValues(values)
+                    //                 .examples(exampleValue != null ? List.of(exampleValue) : null)
+                    //                 .build());
                 });
 
         return asyncHeaders;
@@ -53,7 +63,7 @@ class AsyncAnnotationScannerUtil {
                 .map(AsyncOperation.Headers.Header::value)
                 .map(resolver::resolveStringValue)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static String getDescription(List<AsyncOperation.Headers.Header> value, StringValueResolver resolver) {
@@ -106,8 +116,8 @@ class AsyncAnnotationScannerUtil {
         }
 
         // FIXME
-        //        String annotationSchemaFormat = asyncMessage.schemaFormat();
-        //        var schemaFormat = annotationSchemaFormat != null ? annotationSchemaFormat :
+        // String annotationSchemaFormat = asyncMessage.schemaFormat();
+        // var schemaFormat = annotationSchemaFormat != null ? annotationSchemaFormat :
         // Message.DEFAULT_SCHEMA_FORMAT;
         //        messageBuilder.schemaFormat(schemaFormat);
 
@@ -118,7 +128,7 @@ class AsyncAnnotationScannerUtil {
     }
 
     /**
-     * extracts servers array from the given AsyncOperation, resolves placeholdes with spring variables and
+     * extracts servers array from the given AsyncOperation, resolves placeholders with spring variables and
      * return a List of server names.
      *
      * @param op       the given AsyncOperation
